k8s/auth-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 80
      targetPort: 8001
